# ros2-odometry-control

./: README.md
.cache/clangd/index/: simple_parameter.cpp.94042994E03902CA.idx  simple_publisher.cpp.09097501D63328A1.idx  simple_subscriber.cpp.C04D38B70B163EAA.idx
install/: local_setup.sh  setup.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_parameter  simple_publisher
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh
install/bumperbot_description/share/ament_index/resource_index/parent_prefix_path/: bumperbot_description
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_description/share/bumperbot_description/launch/: display.launch.py
install/bumperbot_description/share/bumperbot_description/rviz/: display.rviz
install/bumperbot_description/share/bumperbot_description/urdf/: bumperbot.urdf.xacro
install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh
log/: latest_build
src/bumperbot_cpp_examples/: CMakeLists.txt  README.md  package.xml
src/bumperbot_cpp_examples/src/: #simple_subscriber.cpp#  simple_parameter.cpp  simple_publisher.cpp  simple_subscriber.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/bumperbot_py_examples/: package.xml  setup.py
